# SymCiSo

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  GenerateProjects.bat  README.md
SymCiSo/include/: symciso.h
SymCiSo/src/: circuit.cpp  circuit.h  connection.cpp  connection.h  main.cpp  node.cpp  node.h  voltage_diff.cpp  voltage_diff.h
SymCiSo/src/components/: component.cpp  component.h  impedance.cpp  impedance.h
SymCiSo/src/core/: core.h  log.cpp  log.h
